# project---until-ex2

./: README.md
App-netflix-ex2/: CMakeLists.txt  Dockerfile.client  Dockerfile.server  README.md  details.txt  docker-compose.yml  how_to_run.txt  netflix_app.drawio
App-netflix-ex2/src/: App.cpp  App.h  IMenuFormat.h  main.cpp
App-netflix-ex2/src/Commands/: DELETE.cpp  DELETE.h  GET.cpp  GET.h  Help.cpp  Help.h  ICommand.h  IInput.h  PATCH.cpp  PATCH.h  POST.cpp  POST.h  recommended.cpp  recommended.h
App-netflix-ex2/src/Movie/: AddWatchedMovies.cpp  AddWatchedMovies.h  GetWatchedMovies.cpp  GetWatchedMovies.h  movie.cpp  movie.h
App-netflix-ex2/src/Storage_Logic/: FileDataStorage.cpp  FileDataStorage.h  IDataStorage.h
App-netflix-ex2/src/Tests/: class-test.cpp  patch-test.cpp  server-commands-tests.cpp  test-App.cpp
App-netflix-ex2/src/User/: GetAllUsers.cpp  GetAllUsers.h  user.cpp  user.h
App-netflix-ex2/src/client/: client.py
App-netflix-ex2/src/server/: ClientHandler.cpp  ClientHandler.h  Executor.cpp  Executor.h  server.cpp
